# QuickDep

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
docs/: AGENT_CONTEXT_EXPERIMENT_PLAN.md  AGENT_CONTEXT_ROUTER_DESIGN.md  AGENT_GUIDE.md  AGENT_HYBRID_BENCHMARK_PLAN.md  AGENT_HYBRID_BENCHMARK_REPORT.md  AGENT_INSTALL_PROMPT.md  API.md  ARK_RUNTIME_AGENT_COMPARISON_V2.md  ARK_RUNTIME_AGENT_COMPARISON_V3.md  CONTEXT_API_DESIGN.md  DAEMON_DESIGN.md  DEV_GUIDE.md  EXPERIMENTS.md  EXPERIMENT_PLAN.md  EXPERIMENT_REPORT.md  EXPERIMENT_RUNBOOK.md  FEATURES.md  INTEGRATIONS.md  PROBLEM_DEFINITION.md  QUICKDEP_PLAIN_LANGUAGE_GUIDE.md  REFERENCE_ANALYSIS.md  TEST_REPORT.md  USAGE.md
npm/quickdep/: README.md  package.json
npm/quickdep/scripts/: install.mjs
packaging/homebrew/: update_formula.py
queries/: go.scm  python.scm  rust.scm  typescript.scm
scripts/: agent_benchmark.py
src/: lib.rs  main.rs
src/cache/: index.rs  mod.rs  query.rs
src/cli/: install_mcp.rs  mod.rs
src/config/: loader.rs  mod.rs  settings.rs
src/core/: dependency.rs  graph.rs  mod.rs  symbol.rs
src/daemon/: mod.rs
src/http/: api.rs  cors.rs  mod.rs  websocket.rs
src/log/: mod.rs  setup.rs
src/mcp/: mod.rs
src/parser/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  kotlin.rs  language.rs  mod.rs  objc.rs  parser_trait.rs  php.rs  python.rs  queries.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
src/project/: id.rs  manager.rs  manifest.rs  mod.rs  project.rs  scanner.rs  state.rs
src/resolver/: import.rs  mod.rs  module.rs  symbol.rs
src/runtime/: mod.rs
src/security/: mod.rs  path.rs
src/storage/: fts.rs  mod.rs  schema.rs  sqlite.rs
src/watcher/: debounce.rs  fs.rs  mod.rs
tests/: e2e.rs  mcp.rs  parser.rs  resolver.rs  storage.rs
tests/common/: mod.rs
tests/e2e/: mixed_workspace.rs
tests/fixtures/c/: sample.c
tests/fixtures/cpp/: sample.cpp
tests/mcp/: resource_flow.rs
tests/parser/: multi_language_fixtures.rs
tests/resolver/: cross_file_alias.rs
tests/storage/: persistence.rs
web/: .env.example  README.md  index.html  package-lock.json  package.json
web/src/: main.tsx
(+28 files in other folders)
